# apps/api/src/lib/types.ts
@@ -1,10 +1,11 @@
 /// <reference path="../../worker-configuration.d.ts" />
 
-import type { PrismaClient } from "@prisma/client";
+import type { PrismaClient, UserRole } from "@prisma/client";
 
 export type WorkerBindings = Env & {
   DATABASE_URL: string;
   CLERK_SECRET_KEY: string;
+  TICKETMASTER_API_KEY: string;
 };
 
 export type AppEnv = {
@@ -12,6 +13,6 @@ export type AppEnv = {
   Variables: {
     prisma?: PrismaClient;
     backgroundTasks?: Promise<unknown>[];
-    user: { id: string; clerkId: string; email: string };
+    user: { id: string; clerkId: string; email: string; role: UserRole };
   };
 };
